# Ratanotes

./: Cargo.toml  DESIGN.md  GEMINI.md  README.md
src/: main.rs
src/app/: app.rs  state.rs  ui.rs
src/components/: calendar.rs  help.rs  mod.rs  note_editor.rs  note_list.rs  status_bar.rs  tag_list.rs  task_editor.rs  task_list.rs
src/utils/: data_handler.rs
