[package]
name = "ratanotes"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.27.0", features = ["all-widgets"] }
crossterm = "0.27.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
glob = "0.3.1"
dirs = "5.0.1"
